# rust-mid

./: Cargo.toml  readme.md
closure_trait_function/: Cargo.toml  readme.md
closure_trait_function/src/: main.rs
dyn_trait_with_box/: Cargo.toml
dyn_trait_with_box/src/: main.rs
fat_or_not/: Cargo.toml
fat_or_not/src/: main.rs
gen_static_and_dyn/: Cargo.toml  readme.md
gen_static_and_dyn/src/: main.rs
life/: Cargo.toml
life/src/: life.rs  main.rs  practice.rs
read_and_write/: Cargo.toml
read_and_write/src/: main.rs
src/: main.rs
still_why_box_or_rcrefcell/: Cargo.toml
still_why_box_or_rcrefcell/src/: main.rs
workspace_examples/: Cargo.toml
workspace_examples/runn/: Cargo.toml
workspace_examples/runn/src/: main.rs
workspace_examples/src/: main.rs
workspace_examples/test_in_crates/: Cargo.toml
workspace_examples/test_in_crates/src/: lib.rs
workspace_examples/workspace_1/: Cargo.toml
workspace_examples/workspace_1/src/: main.rs
workspace_examples/workspace_2/: Cargo.toml
workspace_examples/workspace_2/src/: lib.rs
